# ros2agent

./: .gitignore  LICENSE  README.md
install/: local_setup.sh  setup.sh
install/command_executor/lib/command_executor/: executor_node
install/command_executor/share/command_executor/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/command_executor/share/command_executor/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  command_executorConfig.cmake  command_executor__rosidl_typesupport_cExport.cmake  command_executor__rosidl_typesupport_cppExport.cmake  command_executor__rosidl_typesupport_introspection_cExport-noconfig.cmake  command_executor__rosidl_typesupport_introspection_cExport.cmake  command_executor__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_command_executor__rosidl_generator_cExport-noconfig.cmake  export_command_executor__rosidl_generator_pyExport-noconfig.cmake  export_command_executor__rosidl_generator_pyExport.cmake  export_command_executor__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_command_executor__rosidl_typesupport_fastrtps_cExport.cmake
install/command_executor/share/command_executor/srv/: ExecuteCommand.json  ExecuteCommand.srv
install/llm_bridge/lib/llm_bridge/: llm_chat_node.py
install/llm_bridge/share/llm_bridge/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/llm_bridge/share/llm_bridge/action/: Chat.idl
install/llm_bridge/share/llm_bridge/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_llm_bridge__rosidl_generator_pyExport.cmake  export_llm_bridge__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_llm_bridge__rosidl_typesupport_fastrtps_cppExport.cmake  llm_bridge__rosidl_typesupport_cExport-noconfig.cmake  llm_bridge__rosidl_typesupport_cExport.cmake  llm_bridge__rosidl_typesupport_cppExport-noconfig.cmake  llm_bridge__rosidl_typesupport_introspection_cExport.cmake  llm_bridge__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/llm_bridge/share/llm_bridge/msg/: ContentPart.json
install/llm_bridge_cpp/lib/llm_bridge_cpp/: llm_chat_node
install/llm_bridge_cpp/share/llm_bridge_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/llm_bridge_cpp/share/llm_bridge_cpp/action/: Chat.action  Chat.idl  Chat.json
install/llm_bridge_cpp/share/llm_bridge_cpp/cmake/: ament_cmake_export_dependencies-extras.cmake  llm_bridge_cppConfig-version.cmake  (+15 more)
install/ros_agent/lib/ros_agent/: executor_node  llm_chat_node
install/ros_agent/share/ros_agent/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
scripts/: test_non_stream.py  test_react_agent.py  test_reasoning.py  test_stream.py
src/ros_agent/: CMakeLists.txt  package.xml
src/ros_agent/action/: Chat.action
src/ros_agent/src/: executor_node.cpp  llm_chat_node.cpp
(+150 files in other folders)
