<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llm_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 node for LLM chat with streaming, blocking, cancel, and multimodal support</description>
  <maintainer email="zxy_yys_leaf@163.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 接口生成依赖 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>action_msgs</build_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Python 依赖 -->
  <exec_depend>python3-aiohttp</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>